2004-11-16  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Remove stamp-chi.
	($(srcdir)/stamp-chi, $(srcdir)/config.h.in): Rename to...
	(stamp-chi, config.h.in): Respectively, including associated required
	target changes.

2004-11-16  Derek Price  <derek@ximbiot.com>

	* Makefile.am (stamp-ch): Replace dependency on Makefile with a
	dependency on configure.

2004-11-16  Derek Price  <derek@ximbiot.com>

	* Makefile.am (stamp-chi, config.h.in): Rename to...
	($(srcdir)/stamp-chi, $(srcdir)/config.h.in): Respectively, including
	associated required target changes.

2004-11-16  Derek Price  <derek@ximbiot.com>

	* mkconfig.pl (save_copy): Revert previous change.
	(make_config_h): Don't output full paths to generated comment.

2004-11-15  Derek Price  <derek@ximbiot.com>

	* mkconfig.pl (save_copy): Try to deal with not having write
	permissions.

2004-11-15  Derek Price  <derek@ximbiot.com>

	* mkconfig.pl: Improve diagnostic messages.
	(make_config_h): Don't use dir when creating temp file.
	(save_copy): Use File::Copy::move to portably rename the file, possibly
	across device boundries.

2004-11-15  Derek Price  <derek@ximbiot.com>

	* mkconfig.pl (make_config_h): Improve diagnostic message.

2004-11-11  Mark D. Baushke  <mdb@cvshome.org>

	* config.h.in.in (opterr): Define as rpl_opterr for consistency.
	* config.h.in, config.h: Regenerated.

2004-11-05  Mark D. Baushke  <mdb@cvshome.org>

	* filesubr.c (readlink): Removed. Use lib/readlink.c instead.

2004-11-03  Mark D. Baushke  <mdb@cvshome.org>

	* config.h.in.in (_UINT32_T): Add from top-level config.h.in file.
	* Makefile.in, config.h.in, config.h, stamp-chi: Regenerated.
		
2004-11-02  Mark D. Baushke  <mdb@cvshome.org>

	* config.h.in.in (HAVE_DECL_FLOCKFILE, HAVE_DECL_FUNLOCKFILE,
	HAVE_ENVIRON_DECL, HAVE_ERRNO_DECL, HAVE_SEARCH_H, HAVE_SETENV,
	HAVE_TSEARCH, HAVE_UNSETENV, MALLOC_0_IS_NONNULL, VOID_UNSETENV):
	Add new config options from top-level config.h.in using #undef.