@@ -1,3 +1,9 @@
+2004-11-17  Derek Price  <derek@ximbiot.com>
+
+	* config.h.in.in (getopt, getopt_long, getopt_long_only, optarg,
+	opterr, optind, optopt): Remove obsolete definitions.
+	(__GETOPT_PREFIX): Define this for GNULIB getopt.
+
 2004-11-16  Derek Price  <derek@ximbiot.com>
 
 	* Makefile.am (EXTRA_DIST): Remove stamp-chi.
